CPL/Tema3/tema3-tests/cons.lcpl.err
llc: cons.lcpl.ir:109:1: error: expected instruction opcode
L1:
^
clang: error: no such file or directory: 'cons.lcpl.ir.s'
./eval.sh: line 27: ./cons: No such file or directory
rm: cannot remove `cons': No such file or directory
